# timebase

./: .gitignore  Cargo.toml  LICENSE  README.md  Vagrantfile  vagrant-bootstrap.sh
bpf/: Dockerfile  Makefile  filter.c
lab/: Vagrantfile  client-bootstrap.sh  dmz-bootstrap.sh  server-bootstrap.sh
paper/: build_paper.sh  build_summary.sh  executive_summary.md  paper.bib  paper.md
paper/images/: ntp_direct_access_v_pool.drawio  ntp_direct_access_vendor.drawio  ntp_dmz_access_trusted.drawio  ntp_dmz_access_v2.drawio
src/: client.rs  dmz.rs  lib.rs  main.rs  perf.rs  server.rs
